<resources>
    <string name="app_name">文件快传Lite</string>
    <string name="SaveData">ConfigData</string>
    <string name="edit_hint">请输入HTTP服务器主机和端口</string>
    <string name="edit_tip">不用输入\" http:// \"，请严格按照格式来输入然后重启本应用，否则会闪退；如果闪退，请清除本应用数据\n\n示例:\n192.168.1.1:52020\n\n例子中192.168.1.1是手机的IP，手机的IP在服务器界面顶部已经自动获取，52020是端口号，可以自定义，但范围是0~65535，且该端口号没被其他服务占用，最后说明的是所有字符为英文字符</string>
    <string name="edit_client_tip">不用输入\" http:// \"，请严格按照格式来输入，否则访问不了！\n\n示例:\n192.168.1.1:52020\n\n例子中192.168.1.1是手机的IP，手机的IP在服务器界面顶部已经自动获取，52020是端口号，可以自定义，但范围是0~65535，且该端口号没被其他服务占用，最后说明的是所有字符为英文字符</string>
    <string name="severStatusOn">服务器已开启</string>
    <string name="severStatusOff">服务器已关闭</string>
    <string name="ServerToClientEtHint">输入发送给客户端的文本</string>
    <string name="ServerToClientEtTip">发送文本给客户端</string>
    <string name="ClientToServerEtHint">接收客户端发送的文本编辑框</string>
    <string name="ClientToServerEtTip">接收客户端发送的文本</string>
    <string name="FullScreenEditTip">长按\"接收文本\"按钮进入大屏编辑</string>
    <string name="sendTextBtn">发送文本</string>
    <string name="receiveTextBtn">接收文本</string>
    <string name="ClientToServerFileTip">查看客户端发来的文件日志</string>
    <string name="ClientToServerFileLogTip">接收的文件Log日志</string>
    <string name="serverToClientFileTip">从服务器下载文件和查看日志</string>
    <string name="uploadFileLogBtn">查看上传日志</string>
    <string name="checkDownloadLog">查看下载日志</string>
    <string name="downloadFileFromServer">下载文件</string>
    <string name="ServerToClientFileTip">选择文件发送给客户端</string>
    <string name="selectFile">选择文件</string>
    <string name="sendFile">发送文件</string>
    <string name="postFile_tip">发送文件给服务器</string>
    <string name="post_string">发送文本</string>
    <string name="postStringTextHint">请输入文本</string>
    <string name="post_string_tip">发送文本给服务器</string>
    <string name="test_link_tip">测试服务器是否在线</string>
    <string name="test_link">连接测试</string>
    <string name="serverToClientEtTip">接收服务器发送的文本</string>
    <string name="serverToClientEtHint">接收服务器发送的文本编辑框</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_confirm">确定</string>
    <string name="clear_text">清除</string>
    <string name="bt_close">关闭</string>
    <string name="bt_copy_all">全部复制</string>
    <string name="pick_link">提取网络链接</string>
    <string name="edit_menu_host_port">设置HTTP服务器主机和端口</string>
    <string name="menu_generateCode">生成二维码分享服务器给其他设备</string>
    <string name="copy_url">复制网址</string>
    <string name="menu_scanQRCode">扫描二维码连接服务器</string>
    <string name="menu_shareServer">分享服务器</string>
    <string name="menu_about_page">关于</string>
    <string name="APP_description">文件快传\n\n一款支持文件和文本在手机间传输的软件。\n同时还支持网页端操作。</string>
    <string name="license_name_title">名称</string>
    <string name="license_title">许可协议</string>
    <string name="license_modify_title">是否经过修改</string>
    <string name="server">服务器端</string>
    <string name="client">客户端</string>
    <string name="generateCodeTitle">生成的分享二维码</string>
    <string name="licensePageTitle">版权信息</string>
</resources>