<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/generateCodeTitle"
            android:textColor="#4D8DFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp" />

        <ImageView
            android:id="@+id/generateCodeImage"
            android:layout_width="288dp"
            android:layout_height="288dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/scanResult"
            android:textColor="#1850F8"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="13sp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/bt_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:onClick="bt_confirm"
                android:text="@string/bt_confirm"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textSize="13sp"
                android:background="@drawable/shape3"/>

            <Button
                android:id="@+id/bt_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:onClick="bt_copy"
                android:text="@string/copy_url"
                android:layout_weight="1"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/shape"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>